third_party/rust/cxx/v1/crate/tests/ui/async_fn.rs
#[cxx::bridge]
mod ffi {
    extern "Rust" {
        async fn f();
    }
}

async fn f() {}

fn main() {}
